syntax = "proto3";
package clientconfigservice;
import "modelcommon.proto";




message GetConfigParameters {
    string userId = 1;
}

message Config {
    string config = 1;
}

message StoreConfigParams {
    string userId = 1;
    string config = 2;
}

message Void  {
}

service ClientConfigService{
    rpc GetClientConfig(GetConfigParameters) returns (Config) {};
    rpc StoreClientConfig(StoreConfigParams) returns (model.Empty) {};	
}
